New and improved device selector.

--- a/static/app/scripts/templates/device_selector.html
+++ b/static/app/scripts/templates/device_selector.html
@@ -3,7 +3,7 @@
     {{#devices}}
       <li>
         {{#isCurrentDevice}}
-          {{name}}
+          <span class="selected">{{name}}</span>
         {{/isCurrentDevice}}
         {{^isCurrentDevice}}
           <a href="#devices/{{id}}">{{name}}</a></li>
