--- a/static/app/styles/_mobile_overrides.scss
+++ b/static/app/styles/_mobile_overrides.scss
@@ -6,5 +6,12 @@
     left: 0 !important;
     top: 0 !important;
     width: 100%;
+
+    &.drawer {
+      border-bottom: 1px solid #e0e0e0;
+      box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
+      top: $header-height !important;
+      height: auto;
+    }
   }
 }
