--- a/static/app/scripts/templates/device_selector.html
+++ b/static/app/scripts/templates/device_selector.html
@@ -6,8 +6,9 @@
           <span class="selected">{{name}}</span>
         {{/isCurrentDevice}}
         {{^isCurrentDevice}}
-          <a href="#devices/{{id}}">{{name}}</a></li>
+          <a href="#devices/{{id}}">{{name}}</a>
         {{/isCurrentDevice}}
+      </li>
     {{/devices}}
   </ul>
 </section>
