--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -6,7 +6,7 @@ $footer-background-color--desktop: #fff;
 $footer-background-color: #fff;
 $footer-height: 39px;
 $footer-height--desktop: 47px;
-$footer-link-active-background-color: #6f7181;
+$footer-link-active-background-color: #79c8ee;
 $footer-link-background-color: #6f7181;
 $footer-link-hover-background-color--desktop: #ebebeb;
 $footer-text-color--desktop: #56565a;
