Renamed Play Sound and Lost Mode to Ring and Lock.

--- a/static/app/scripts/templates/device.html
+++ b/static/app/scripts/templates/device.html
@@ -10,7 +10,7 @@
   <div class="brand">Firefox OS</div>
 </div>
 <footer>
-  <span class="button play-sound"><a>Play Sound</a></span>
-  <span class="button lost-mode"><a>Lost Mode</a></span>
+  <span class="button play-sound"><a>Ring</a></span>
+  <span class="button lost-mode"><a>Lock</a></span>
   <span class="button erase"><a>Erase</a></span>
 </footer>
