--- a/static/app/scripts/templates/lost_mode.html
+++ b/static/app/scripts/templates/lost_mode.html
@@ -1,7 +1,7 @@
 <form>
   <header>
     <a class="close">Close</a>
-    <h2>Lost Mode</h2>
+    <h2>Lock Device</h2>
   </header>
   {{^hasPasscode}}
     <ul class="stepper">
