--- a/static/app/scripts/templates/play_sound.html
+++ b/static/app/scripts/templates/play_sound.html
@@ -1,6 +1,6 @@
 <header>
   <a class="close">Close</a>
-  <h2>Play Sound</h2>
+  <h2>Ring Device</h2>
 </header>
 <section>
   <p class="tbd">This will play a sound on your device to help you find it.</p>
