--- a/static/app/scripts/templates/lost_mode_passcode.html
+++ b/static/app/scripts/templates/lost_mode_passcode.html
@@ -1,7 +1,7 @@
 <form>
   <header>
     <a class="back">Back</a>
-    <h2>Lost Mode</h2>
+    <h2>Lock Device</h2>
   </header>
   <ul class="stepper">
     <li class="complete">Step 1</li>
