More label changes for Ring Device and Lock Device.

--- a/static/app/scripts/templates/erase.html
+++ b/static/app/scripts/templates/erase.html
@@ -1,6 +1,6 @@
 <header>
   <a class="close">Close</a>
-  <h2>Erase</h2>
+  <h2>Erase Device</h2>
 </header>
 <section>
   <p>All content will be erased. Your device will no longer be able to be located or tracked.</p>
