--- a/static/app/scripts/templates/lost_mode_passcode.html
+++ b/static/app/scripts/templates/lost_mode_passcode.html
@@ -8,7 +8,7 @@
     <li class="active">Step 2</li>
   </ul>
   <section>
-    <p>Lock your phone by entering a passcode:</p>
+    <p>Lock your device by entering a passcode:</p>
 
     <input type="text" name="passcode-1" class="passcode" required pattern="\d{4}" maxlength="4">
 
@@ -16,10 +16,10 @@
 
     <input type="text" name="passcode-2" class="passcode" required pattern="\d{4}" maxlength="4">
 
-    <p>Once your phone is locked, you will not be able to change this code again.</p>
+    <p>Once your device is locked, you will not be able to change this code again.</p>
 
     <div class="buttons">
-      <button class="activate primary">Activate Lost Mode</button>
+      <button class="activate primary">Lock Device</button>
     </div>
   </section>
 </form>
