--- a/static/app/scripts/templates/play_sound.html
+++ b/static/app/scripts/templates/play_sound.html
@@ -6,6 +6,6 @@
   <p class="tbd">This will play a sound on your device to help you find it.</p>
 
   <div class="buttons">
-    <button type="button" class="play-sound primary tbd">Play Sound</button>
+    <button type="button" class="play-sound primary tbd">Ring Device</button>
   </div>
 </section>
