Removed .tbd CSS class.

--- a/static/app/scripts/templates/play_sound.html
+++ b/static/app/scripts/templates/play_sound.html
@@ -3,9 +3,9 @@
   <h2>Ring Device</h2>
 </header>
 <section>
-  <p class="tbd">This will play a sound on your device to help you find it.</p>
+  <p>This will play a sound on your device to help you find it.</p>
 
   <div class="buttons">
-    <button type="button" class="play-sound primary tbd">Ring Device</button>
+    <button type="button" class="play-sound primary">Ring Device</button>
   </div>
 </section>
