--- a/static/app/styles/_desktop.scss
+++ b/static/app/styles/_desktop.scss
@@ -1,4 +1,3 @@
-
 @media only screen and (min-width: 768px) {
   #stage {
     padding-bottom: 0; // remove padding on the bottom for footer
@@ -48,17 +47,17 @@
   }
 
   #modal {
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
     background-clip: padding-box;
+    border-radius: 6px;
+    border: 1px solid $modal-border-color;
+    box-shadow: 0 5px 8px $modal-box-shadow-color;
     margin-top: 12px;
     width: 300px;
 
     &::before {
+      border-color: transparent transparent $modal-background-color transparent;
       border-style: solid;
       border-width: 0 10px 10px 10px;
-      border-color: transparent transparent $modal-background-color transparent;
       content: '';
       height: 0;
       left: 48px;
@@ -69,9 +68,9 @@
     }
 
     &::after {
+      border-color: transparent transparent $modal-box-shadow-color transparent;
       border-style: solid;
       border-width: 0 11px 11px 11px;
-      border-color: transparent transparent rgba(0, 0, 0, 0.2) transparent;
       content: '';
       height: 0;
       left: 47px;
@@ -90,7 +89,8 @@
       top: $header-height !important;
       width: 400px;
 
-      &::before, &::after {
+      &::before,
+      &::after {
         display: none;
       }
     }
