--- a/static/app/styles/_fonts.scss
+++ b/static/app/styles/_fonts.scss
@@ -1,47 +1,44 @@
-/* TypoPRO Fira Sans Bold */
-@font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-Bold.eot?#iefix') format('embedded-opentype'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-Bold.woff') format('woff'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-Bold.ttf')  format('truetype');
-  font-style:   normal;
-  font-weight:  bold;
-  font-stretch: normal;
-  font-variant: normal;
+
+
+@mixin font-face($font-family, $path, $font-style: normal, $font-weight: normal, $font-stretch: normal, $font-variant: normal) {
+  @font-face {
+    font-family: $font-family;
+    src: url('#{$path}.eot?#iefix') format('embedded-opentype'),
+         url('#{$path}.woff') format('woff'),
+         url('#{$path}.ttf') format('truetype');
+    font-style: $font-style;
+    font-weight: $font-weight;
+    font-stretch: $font-stretch;
+    font-variant: $font-variant;
+  }
 }
 
-/* TypoPRO Fira Sans Bold Italic */
-@font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-BoldItalic.woff') format('woff'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-BoldItalic.ttf')  format('truetype');
-  font-style:   italic;
-  font-weight:  bold;
-  font-stretch: normal;
-  font-variant: normal;
-}
+$font-base: '/bower_components/typopro/web/TypoPRO-FiraSans/';
 
 /* TypoPRO Fira Sans */
-@font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-Regular.eot?#iefix') format('embedded-opentype'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-Regular.woff') format('woff'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-Regular.ttf')  format('truetype');
-  font-style:   normal;
-  font-weight:  normal;
-  font-stretch: normal;
-  font-variant: normal;
-}
+@include font-face(
+  $font-family: $default-font-family,
+  $path: '#{$font-base}TypoPRO-FiraSans-Regular'
+);
+
+/* TypoPRO Fira Sans Bold */
+@include font-face(
+  $font-family: $default-font-family,
+  $path: '#{$font-base}TypoPRO-FiraSans-Bold',
+  $font-weight: bold
+);
 
 /* TypoPRO Fira Sans Italic */
-@font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-BookItalic.eot?#iefix') format('embedded-opentype'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-BookItalic.woff') format('woff'),
-       url('/bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans-BookItalic.ttf')  format('truetype');
-  font-style:   italic;
-  font-weight:  normal;
-  font-stretch: normal;
-  font-variant: normal;
-}
+@include font-face(
+  $font-family: $default-font-family,
+  $path: '#{$font-base}TypoPRO-FiraSans-BookItalic',
+  $font-style: italic
+);
+
+/* TypoPRO Fira Sans Bold Italic */
+@include font-face(
+  $font-family: $default-font-family,
+  $path: '#{$font-base}TypoPRO-FiraSans-BoldItalic',
+  $font-style: italic,
+  $font-weight: bold
+);
