--- a/static/app/styles/_mobile_overrides.scss
+++ b/static/app/styles/_mobile_overrides.scss
@@ -1,5 +1,5 @@
-// Styles are "mobile first" and don't usually belong in this media block. Only rules that are
-// important overrides from desktop belong here.
+// Styles are "mobile first" and don't usually belong in this media block. Only
+// rules that are important overrides from desktop belong here.
 @media only screen and (max-width: 768px) {
   #modal {
     height: 100%;
@@ -8,10 +8,10 @@
     width: 100%;
 
     &.drawer {
-      border-bottom: 1px solid #e0e0e0;
-      box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
-      top: $header-height !important;
+      border-bottom: 1px solid $drawer-border-color;
+      box-shadow: 0 5px 8px $drawer-box-shadow-color;
       height: auto;
+      top: $header-height !important;
     }
   }
 }
