--- a/static/app/scripts/templates/device.html
+++ b/static/app/scripts/templates/device.html
@@ -5,7 +5,7 @@
 </header>
 <div id="map">
   <div class="locating">
-    <h2>Locating...</h2>
+    <h2>Connecting to device...</h2>
   </div>
   <div class="brand">Firefox OS</div>
 </div>
