Added support for Retina images.

--- a/static/app/scripts/templates/device_selector.html
+++ b/static/app/scripts/templates/device_selector.html
@@ -1,9 +1,9 @@
 <section>
   <ul>
     {{#devices}}
-      <li>
+      <li {{#isCurrentDevice}}class="selected"{{/isCurrentDevice}}>
         {{#isCurrentDevice}}
-          <span class="selected">{{name}}</span>
+          <span>{{name}}</span>
         {{/isCurrentDevice}}
         {{^isCurrentDevice}}
           <a href="#devices/{{id}}">{{name}}</a>
