--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -102,6 +102,8 @@ a {
     z-index: 1000; }
     #stage header .menu {
       background-image: url("../images/nav-menu.png");
+      -webkit-background-size: 24px 24px;
+      background-size: 24px 24px;
       display: block;
       height: 24px;
       left: 17px;
@@ -112,6 +114,9 @@ a {
       top: 50%;
       white-space: nowrap;
       width: 24px; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #stage header .menu {
+          background-image: url("../images/nav-menu@2x.png"); } }
     #stage header h1 {
       color: #999;
       font-size: 24px;
@@ -129,9 +134,15 @@ a {
       right: 20px;
       top: 50%; }
   #stage #map {
-    background: url("../images/bg.png") no-repeat 50% 50%, -webkit-linear-gradient(270deg, #f4f4f4, #fff);
-    background: url("../images/bg.png") no-repeat 50% 50%, linear-gradient(180deg, #f4f4f4, #fff);
+    background: transparent no-repeat 50% 50%, -webkit-linear-gradient(270deg, #f4f4f4, #fff);
+    background: transparent no-repeat 50% 50%, linear-gradient(180deg, #f4f4f4, #fff);
+    background-image: url("../images/bg.png");
+    -webkit-background-size: 2000px 950px;
+    background-size: 2000px 950px;
     position: relative; }
+    @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+      #stage #map {
+        background-image: url("../images/bg@2x.png"); } }
     #stage #map .locating {
       height: 230px;
       left: 50%;
@@ -154,14 +165,23 @@ a {
           animation-iteration-count: infinite;
           -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
-          background: url("../images/radar-spinner.png") no-repeat;
+          background-image: url("../images/radar-spinner.png");
+          -webkit-background-size: 150px 150px;
+          background-size: 150px 150px;
+          background-repeat: no-repeat;
           content: '';
           display: block;
           height: 150px;
           margin: 0 auto 35px auto;
           width: 150px; }
+          @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+            #stage #map .locating h2::before {
+              background-image: url("../images/radar-spinner@2x.png"); } }
     #stage #map .brand {
-      background: url("../images/firefoxos.png") no-repeat;
+      background-image: url("../images/firefoxos.png");
+      -webkit-background-size: 147px 30px;
+      background-size: 147px 30px;
+      background-repeat: no-repeat;
       bottom: 38px;
       height: 30px;
       left: 38px;
@@ -169,14 +189,23 @@ a {
       text-indent: -1000em;
       width: 147px;
       z-index: 1000; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #stage #map .brand {
+          background-image: url("../images/firefoxos@2x.png"); } }
     #stage #map .pin-locating-spinner {
-      background: url("../images/radar-small-animated.gif") no-repeat;
+      background-image: url("../images/radar-small-animated.gif");
+      -webkit-background-size: 39px 39px;
+      background-size: 39px 39px;
+      background-repeat: no-repeat;
       height: 39px;
       margin-top: -162px;
       margin-left: 10px;
       position: absolute;
       width: 39px;
       z-index: 500; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #stage #map .pin-locating-spinner {
+          background-image: url("../images/radar-small-animated@2x.gif"); } }
     #stage #map.leaflet-container {
       background: #fff; }
       #stage #map.leaflet-container .locating {
@@ -196,7 +225,7 @@ a {
       height: 39px;
       width: 33%; }
       #stage footer .button a {
-        background: url("../images/icon-sound.png") no-repeat 50% 50%;
+        background: transparent no-repeat 50% 50%;
         color: #56565a;
         display: block;
         font-size: 13px;
@@ -207,11 +236,26 @@ a {
         #stage footer .button a:active {
           background-color: #79c8ee; }
       #stage footer .button.play-sound a {
-        background-image: url("../images/icon-sound.png"); }
+        background-image: url("../images/icon-sound.png");
+        -webkit-background-size: 39px 39px;
+        background-size: 39px 39px; }
+        @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+          #stage footer .button.play-sound a {
+            background-image: url("../images/icon-sound@2x.png"); } }
       #stage footer .button.lost-mode a {
-        background-image: url("../images/icon-lock.png"); }
+        background-image: url("../images/icon-lock.png");
+        -webkit-background-size: 39px 39px;
+        background-size: 39px 39px; }
+        @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+          #stage footer .button.lost-mode a {
+            background-image: url("../images/icon-lock@2x.png"); } }
       #stage footer .button.erase a {
-        background-image: url("../images/icon-erase.png"); }
+        background-image: url("../images/icon-erase.png");
+        -webkit-background-size: 39px 39px;
+        background-size: 39px 39px; }
+        @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+          #stage footer .button.erase a {
+            background-image: url("../images/icon-erase@2x.png"); } }
 
 #modal {
   background: #f4f4f4;
@@ -243,9 +287,19 @@ a {
       white-space: nowrap;
       width: 24px; }
     #modal header .close {
-      background-image: url("../images/nav-close.png"); }
+      background-image: url("../images/nav-close.png");
+      -webkit-background-size: 24px 24px;
+      background-size: 24px 24px; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #modal header .close {
+          background-image: url("../images/nav-close@2x.png"); } }
     #modal header .back {
-      background-image: url("../images/nav-back.png"); }
+      background-image: url("../images/nav-back.png");
+      -webkit-background-size: 24px 24px;
+      background-size: 24px 24px; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #modal header .back {
+          background-image: url("../images/nav-back@2x.png"); } }
   #modal .stepper {
     background: #fff;
     height: 5px;
@@ -317,17 +371,44 @@ a {
         margin: 0;
         padding: 0; }
         #modal.drawer section ul li {
+          background: transparent no-repeat 16px 50%;
+          background-image: url("../images/icon-device.png");
+          -webkit-background-size: 32px 32px;
+          background-size: 32px 32px;
           border-bottom: 1px solid #e0e0e0;
           list-style: none; }
+          @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+            #modal.drawer section ul li {
+              background-image: url("../images/icon-device@2x.png"); } }
+          #modal.drawer section ul li.selected {
+            background: transparent no-repeat left 16px top 50%;
+            background-image: url("../images/icon-device-active.png");
+            -webkit-background-size: 32px 32px;
+            background-size: 32px 32px; }
+            @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+              #modal.drawer section ul li.selected {
+                background-image: url("../images/icon-device-active@2x.png"); } }
+            #modal.drawer section ul li.selected a, #modal.drawer section ul li.selected span {
+              background: transparent no-repeat right 16px top 50%;
+              background-image: url("../images/icon-check.png");
+              -webkit-background-size: 24px 24px;
+              background-size: 24px 24px; }
+              @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+                #modal.drawer section ul li.selected a, #modal.drawer section ul li.selected span {
+                  background-image: url("../images/icon-check@2x.png"); } }
           #modal.drawer section ul li:last-child {
             border-bottom: 0; }
           #modal.drawer section ul li a, #modal.drawer section ul li span {
-            background: url("../images/icon-device.png") no-repeat 16px 50%, url("../images/nav-forward.png") no-repeat right 16px top 50%;
+            background: transparent no-repeat right 16px top 50%;
+            background-image: url("../images/nav-forward.png");
+            -webkit-background-size: 24px 24px;
+            background-size: 24px 24px;
             color: inherit;
             display: block;
             padding: 18px 0 18px 60px; }
-            #modal.drawer section ul li a.selected, #modal.drawer section ul li span.selected {
-              background: url("../images/icon-device-active.png") no-repeat left 16px top 50%, url("../images/icon-check.png") no-repeat right 16px top 50%; }
+            @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+              #modal.drawer section ul li a, #modal.drawer section ul li span {
+                background-image: url("../images/nav-forward@2x.png"); } }
 
 #notifier {
   background: #f8e979;
@@ -357,7 +438,7 @@ a {
         height: 47px;
         width: auto; }
         #stage footer .button a {
-          background: url("../images/icon-sound.png") no-repeat left 50%;
+          background: transparent no-repeat left 50%;
           display: inline-block;
           font-size: 14px;
           height: 47px;
@@ -366,13 +447,6 @@ a {
           width: auto; }
           #stage footer .button a:hover {
             background-color: #ebebeb; }
-        #stage footer .button.play-sound a {
-          background-image: url("../images/icon-sound.png"); }
-        #stage footer .button.lost-mode a {
-          background-image: url("../images/icon-lock.png");
-          margin: 0; }
-        #stage footer .button.erase a {
-          background-image: url("../images/icon-erase.png"); }
   #modal {
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
