--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -155,7 +155,8 @@ a {
       #stage #map .locating h2 {
         color: #555;
         font-size: 14px;
-        font-weight: normal; }
+        font-weight: normal;
+        position: relative; }
         #stage #map .locating h2::before {
           -webkit-animation-name: spin;
           animation-name: spin;
@@ -165,7 +166,7 @@ a {
           animation-iteration-count: infinite;
           -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
-          background-image: url("../images/radar-spinner.png");
+          background-image: url("../images/spinner.png");
           -webkit-background-size: 150px 150px;
           background-size: 150px 150px;
           background-repeat: no-repeat;
@@ -176,7 +177,24 @@ a {
           width: 150px; }
           @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
             #stage #map .locating h2::before {
-              background-image: url("../images/radar-spinner@2x.png"); } }
+              background-image: url("../images/spinner@2x.png"); } }
+        #stage #map .locating h2::after {
+          background-image: url("../images/spinner-binoculars.png");
+          -webkit-background-size: 90px 90px;
+          background-size: 90px 90px;
+          background-repeat: no-repeat;
+          background-position: 50% 50%;
+          content: '';
+          display: block;
+          height: 150px;
+          left: 50%;
+          margin-left: -75px;
+          position: absolute;
+          top: 0;
+          width: 150px; }
+          @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+            #stage #map .locating h2::after {
+              background-image: url("../images/spinner-binoculars@2x.png"); } }
     #stage #map .brand {
       background-image: url("../images/firefoxos.png");
       -webkit-background-size: 147px 30px;
@@ -193,7 +211,7 @@ a {
         #stage #map .brand {
           background-image: url("../images/firefoxos@2x.png"); } }
     #stage #map .pin-locating-spinner {
-      background-image: url("../images/radar-small-animated.gif");
+      background-image: url("../images/spinner-small-animated.gif");
       -webkit-background-size: 39px 39px;
       background-size: 39px 39px;
       background-repeat: no-repeat;
@@ -205,7 +223,7 @@ a {
       z-index: 500; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #stage #map .pin-locating-spinner {
-          background-image: url("../images/radar-small-animated@2x.gif"); } }
+          background-image: url("../images/spinner-small-animated@2x.gif"); } }
     #stage #map.leaflet-container {
       background: #fff; }
       #stage #map.leaflet-container .locating {
