--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -27,3 +27,5 @@ $modal-button-background-color: #bbb;
 $modal-button-danger-background-color: #f00;
 $modal-button-primary-background-color: #79c8ee;
 $modal-text-color: #686868;
+$parsley-error-background-color: #f00;
+$parsley-error-text-color: #fff;
