Tweaked error message background color. Added breathing room.

--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -27,5 +27,5 @@ $modal-button-background-color: #bbb;
 $modal-button-danger-background-color: #f00;
 $modal-button-primary-background-color: #79c8ee;
 $modal-text-color: #686868;
-$parsley-error-background-color: #f00;
-$parsley-error-text-color: #fff;
+$parsley-error-background-color: #f5dd70;
+$parsley-error-text-color: #81795e;
