Wrapped template strings with l function.

--- a/static/app/scripts/templates/device_not_found.html
+++ b/static/app/scripts/templates/device_not_found.html
@@ -1,5 +1,5 @@
 <div class="hero">
-  <h1>Sorry but you don't have any devices.</h1>
-  <h2>Enable Find My Device on your Firefox OS device.</h2>
-  <a href="/signout/" class="signout">Sign out</a>
+  <h1>{{#l}}Sorry but you don't have any devices.{{/l}}</h1>
+  <h2>{{#l}}Enable Find My Device on your Firefox OS device.{{/l}}</h2>
+  <a href="/signout/" class="signout">{{#l}}Sign out{{/l}}</a>
 </div>
