--- a/static/app/scripts/templates/erase_confirmation.html
+++ b/static/app/scripts/templates/erase_confirmation.html
@@ -1,12 +1,12 @@
 <header>
-  <h2>Confirmation</h2>
+  <h2>{{#l}}Confirmation{{/l}}</h2>
 </header>
 <section>
-  <p>Are you sure you want to erase all your data?</p>
+  <p>{{#l}}Are you sure you want to erase all your data?{{/l}}</p>
 </section>
 <footer>
   <div class="buttons">
-    <button type="button" class="cancel">Cancel</button>
-    <button type="button" class="erase danger">Erase</button>
+    <button type="button" class="cancel">{{#l}}Cancel{{/l}}</button>
+    <button type="button" class="erase danger">{{#l}}Erase{{/l}}</button>
   </div>
 </footer>
