--- a/static/app/scripts/templates/play_sound.html
+++ b/static/app/scripts/templates/play_sound.html
@@ -1,11 +1,11 @@
 <header>
-  <a class="close">Close</a>
-  <h2>Ring Device</h2>
+  <a class="close">{{#l}}Close{{/l}}</a>
+  <h2>{{#l}}Ring Device{{/l}}</h2>
 </header>
 <section>
-  <p>This will play a sound on your device to help you find it.</p>
+  <p>{{#l}}This will play a sound on your device to help you find it.{{/l}}</p>
 
   <div class="buttons">
-    <button type="button" class="play-sound primary">Ring Device</button>
+    <button type="button" class="play-sound primary">{{#l}}Ring Device{{/l}}</button>
   </div>
 </section>
