Fixed unclosed l block.

--- a/static/app/scripts/templates/device.html
+++ b/static/app/scripts/templates/device.html
@@ -11,6 +11,6 @@
 </div>
 <footer>
   <span class="button play-sound"><a>{{#l}}Ring{{/l}}</a></span>
-  <span class="button lost-mode"><a>{{#l}}Lock</a></span>
+  <span class="button lost-mode"><a>{{#l}}Lock{{/l}}</a></span>
   <span class="button erase"><a>{{#l}}Erase{{/l}}</a></span>
 </footer>
