Removed background for mobile breakpoints.
Should fix issue with flickering on FxOS devices.

--- a/static/app/styles/_desktop.scss
+++ b/static/app/styles/_desktop.scss
@@ -3,6 +3,10 @@
     padding-bottom: 0; // remove padding on the bottom for footer
     padding-top: $header-height + $footer-height--desktop;
 
+    #map {
+      @include hidpi-background-image(bg, 2000px 950px);
+    }
+
     footer {
       background: $footer-background-color--desktop;
       bottom: auto;
