--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -136,13 +136,7 @@ a {
   #stage #map {
     background: transparent no-repeat 50% 50%, -webkit-linear-gradient(270deg, #f4f4f4, #fff);
     background: transparent no-repeat 50% 50%, linear-gradient(180deg, #f4f4f4, #fff);
-    background-image: url("../images/bg.png");
-    -webkit-background-size: 2000px 950px;
-            background-size: 2000px 950px;
     position: relative; }
-    @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
-      #stage #map {
-        background-image: url("../images/bg@2x.png"); } }
     #stage #map .locating {
       height: 230px;
       left: 50%;
@@ -466,6 +460,13 @@ a {
   #stage {
     padding-bottom: 0;
     padding-top: 94px; }
+    #stage #map {
+      background-image: url("../images/bg.png");
+      -webkit-background-size: 2000px 950px;
+              background-size: 2000px 950px; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #stage #map {
+          background-image: url("../images/bg@2x.png"); } }
     #stage footer {
       background: #fff;
       bottom: auto;
